# clique-ai

./: .gitignore  README.md  assistant.py  pyproject.toml
.chainlit/: .langchain.db  config.toml
api/: chainlit_serve.py  copilotkit_serve.py
app/: consts.py
app/chains/: random.py
app/config/: config.yaml  load_configs.py
app/experts/: base_agent.py  router_agent.py  tiny_agents.py
app/models/: llms.py
app/nodes/: agents.py  genesis_supervisor.py  random.py  search.py
app/pipelines/: supervisor_agent_pipeline.py
app/states/: research.py  supervisor.py
app/tools/: webscrape.py  writer.py
app/utils/: state_helpers.py  toolkit.py
app/workflows/: genesis.py
public/: script.js  stylesheet.css
